name:                rapcandy
version:             0.1.0.0
synopsis:            markov-chain twitter bot
-- description:         
license:             MIT
license-file:        LICENSE
author:              Benjamin Kovach
maintainer:          bkovach13@gmail.com
-- copyright:           
category:            Humor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable rapcandy
  main-is:             RapCandy.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings, NoMonomorphismRestriction, BangPatterns, RecordWildCards
  build-depends:       base >=4.7 && <4.8
                     , authenticate-oauth >=1.5 && <1.6
                     , HTTP >=4000.2 && <4000.3
                     , http-client >=0.3 && <0.4
                     , http-client-tls >=0.2 && <0.3
                     , http-types >=0.8 && <0.9
                     , transformers >=0.4 && <0.5
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , MonadRandom >=0.1 && <0.2
                     , text >=1.1 && <1.2
                     , directory >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010